--- a/package.json
+++ b/package.json
@@ -22,10 +22,16 @@
     "pretty-hrtime": "^1.0.3"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "eslint": "^3.17.1",
     "eslint-config-airbnb-base": "^11.1.1",
     "eslint-plugin-import": "^2.2.0",
+    "express": "^4.15.2",
     "gulp": "^3.9.1",
-    "gulp-tag-version": "^1.3.0"
+    "gulp-tag-version": "^1.3.0",
+    "mocha": "^3.2.0",
+    "sinon": "^2.0.0",
+    "sinon-chai": "^2.8.0",
+    "supertest": "^3.0.0"
   }
 }
