--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pretty-hrtime": "^1.0.3"
   },
   "devDependencies": {
+    "bunyan": "^1.8.8",
     "chai": "^3.5.0",
     "eslint": "^3.17.1",
     "eslint-config-airbnb-base": "^11.1.1",
